WIP improved processing speed
